[gd_scene load_steps=25 format=2]

[ext_resource path="res://Sprites/arrow/arrow16.png" type="Texture" id=1]
[ext_resource path="res://Sprites/arrow/arrow14.png" type="Texture" id=2]
[ext_resource path="res://Sprites/arrow/arrow17.png" type="Texture" id=3]
[ext_resource path="res://audio/weapon sound/arrow/arrow_sound.wav" type="AudioStream" id=4]
[ext_resource path="res://Sprites/arrow/arrow15.png" type="Texture" id=5]
[ext_resource path="res://Sprites/arrow/arrow12.png" type="Texture" id=6]
[ext_resource path="res://Sprites/arrow/arrow13.png" type="Texture" id=7]
[ext_resource path="res://Sprites/arrow/arrow19.png" type="Texture" id=8]
[ext_resource path="res://Sprites/arrow/arrow20.png" type="Texture" id=9]
[ext_resource path="res://Sprites/arrow/arrow10.png" type="Texture" id=10]
[ext_resource path="res://Sprites/arrow/arrow1.png" type="Texture" id=11]
[ext_resource path="res://Sprites/arrow/arrow8.png" type="Texture" id=12]
[ext_resource path="res://Sprites/arrow/arrow3.png" type="Texture" id=13]
[ext_resource path="res://Sprites/arrow/arrow2.png" type="Texture" id=14]
[ext_resource path="res://Sprites/arrow/arrow6.png" type="Texture" id=15]
[ext_resource path="res://Sprites/arrow/arrow7.png" type="Texture" id=16]
[ext_resource path="res://Sprites/arrow/arrow18.png" type="Texture" id=17]
[ext_resource path="res://Sprites/arrow/arrow9.png" type="Texture" id=18]
[ext_resource path="res://Sprites/arrow/arrow4.png" type="Texture" id=19]
[ext_resource path="res://Sprites/arrow/arrow11.png" type="Texture" id=20]
[ext_resource path="res://Sprites/arrow/arrow5.png" type="Texture" id=21]
[ext_resource path="res://Scripts/Arrow.gd" type="Script" id=22]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 10 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 17 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "glowing",
"speed": 30.0
} ]

[node name="Area2D" type="Area2D"]
position = Vector2( 128, 32 )
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
collision_mask = 4
script = ExtResource( 22 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "glowing"
frame = 5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( 1.90735e-06, 0 )
scale = Vector2( 3.2, 1 )

[node name="Shoot_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
